src/snapshots/sel__tests__parsing-25.snap
---
source: src/tests.rs
expression: "t(b\"iterate [_ 1, add 1] 1\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    9..10,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Func(
                        Number,
                        Func(
                            Number,
                            Number,
                        ),
                    ),
                },
            ),
        ],
    ),
)
