src/snapshots/sel__tests__parsing-29.snap
---
source: src/tests.rs
expression: "t(b\"{1, 2, 3}, let {h,, t} h [panic::]\")"
---
Ok(
    (
        Number,
        Tree {
            loc: Location(
                0,
                11..34,
            ),
            ty: 6,
            value: Apply(
                Bind(
                    List(
                        [
                            Name(
                                Location(
                                    0,
                                    16..17,
                                ),
                                "h",
                            ),
                        ],
                        Some(
                            (
                                Location(
                                    0,
                                    20..21,
                                ),
                                "t",
                            ),
                        ),
                    ),
                    Tree {
                        loc: Location(
                            0,
                            23..24,
                        ),
                        ty: 6,
                        value: Apply(
                            Name(
                                "h",
                            ),
                            [],
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            25..34,
                        ),
                        ty: 9,
                        value: Apply(
                            Name(
                                "panic",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        31..33,
                                    ),
                                    ty: 1,
                                    value: Bytes(
                                        [],
                                    ),
                                },
                            ],
                        ),
                    },
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            0..9,
                        ),
                        ty: 4,
                        value: List(
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        1..2,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        1.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        4..5,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        2.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        7..8,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        3.0,
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
