src/snapshots/sel__tests__parsing-3.snap
---
source: src/tests.rs
expression: "t(b\"-, split:-:, map[tonum, add1, tostr], join:+:\")"
---
Ok(
    (
        Bytes(
            false,
        ),
        Tree {
            loc: Location(
                0,
                38..45,
            ),
            ty: 46,
            value: Apply(
                Name(
                    "join",
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            42..45,
                        ),
                        ty: 1,
                        value: Bytes(
                            [
                                43,
                            ],
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            13..36,
                        ),
                        ty: 16,
                        value: Apply(
                            Name(
                                "map",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        16..36,
                                    ),
                                    ty: 38,
                                    value: Apply(
                                        Name(
                                            "pipe",
                                        ),
                                        [
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    22..23,
                                                ),
                                                ty: 29,
                                                value: Apply(
                                                    Name(
                                                        "pipe",
                                                    ),
                                                    [
                                                        Tree {
                                                            loc: Location(
                                                                0,
                                                                17..22,
                                                            ),
                                                            ty: 21,
                                                            value: Apply(
                                                                Name(
                                                                    "tonum",
                                                                ),
                                                                [],
                                                            ),
                                                        },
                                                        Tree {
                                                            loc: Location(
                                                                0,
                                                                24..28,
                                                            ),
                                                            ty: 22,
                                                            value: Apply(
                                                                Name(
                                                                    "add",
                                                                ),
                                                                [
                                                                    Tree {
                                                                        loc: Location(
                                                                            0,
                                                                            27..28,
                                                                        ),
                                                                        ty: 0,
                                                                        value: Number(
                                                                            1.0,
                                                                        ),
                                                                    },
                                                                ],
                                                            ),
                                                        },
                                                    ],
                                                ),
                                            },
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    30..35,
                                                ),
                                                ty: 32,
                                                value: Apply(
                                                    Name(
                                                        "tostr",
                                                    ),
                                                    [],
                                                ),
                                            },
                                        ],
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        3..11,
                                    ),
                                    ty: 8,
                                    value: Apply(
                                        Name(
                                            "split",
                                        ),
                                        [
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    8..11,
                                                ),
                                                ty: 1,
                                                value: Bytes(
                                                    [
                                                        45,
                                                    ],
                                                ),
                                            },
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    0..1,
                                                ),
                                                ty: 4,
                                                value: Apply(
                                                    Name(
                                                        "-",
                                                    ),
                                                    [],
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
