src/snapshots/sel__tests__parsing-30.snap
---
source: src/tests.rs
expression: "t(b\"{1, 2, 3}, let {h,, t} t\")"
---
Ok(
    (
        List(
            true,
            Number,
        ),
        Tree {
            loc: Location(
                0,
                11..24,
            ),
            ty: 8,
            value: Apply(
                Bind(
                    List(
                        [
                            Name(
                                Location(
                                    0,
                                    16..17,
                                ),
                                "h",
                            ),
                        ],
                        Some(
                            (
                                Location(
                                    0,
                                    20..21,
                                ),
                                "t",
                            ),
                        ),
                    ),
                    Tree {
                        loc: Location(
                            0,
                            23..24,
                        ),
                        ty: 8,
                        value: Apply(
                            Name(
                                "t",
                            ),
                            [],
                        ),
                    },
                    None,
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            0..9,
                        ),
                        ty: 4,
                        value: List(
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        1..2,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        1.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        4..5,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        2.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        7..8,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        3.0,
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
