src/snapshots/sel__tests__parsing-32.snap
---
source: src/tests.rs
expression: "t(b\"let a let b a b a\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    6..9,
                ),
                Unexpected {
                    token: Let,
                    expected: "a value",
                },
            ),
            Error(
                Location(
                    0,
                    10..11,
                ),
                UnknownName {
                    name: "b",
                    expected_type: Named(
                        "a=b",
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    12..13,
                ),
                UnknownName {
                    name: "a",
                    expected_type: Named(
                        "paramof(?let)=a",
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    14..15,
                ),
                UnknownName {
                    name: "b",
                    expected_type: Named(
                        "paramof(returnof(?let))=b",
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    16..17,
                ),
                UnknownName {
                    name: "a",
                    expected_type: Named(
                        "paramof(returnof(returnof(?let)))=a",
                    ),
                },
            ),
        ],
    ),
)
