src/snapshots/sel__tests__parsing-33.snap
---
source: src/tests.rs
expression: "t(b\"let {a b, c} 0\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    4..5,
                ),
                ContextCaused {
                    error: Error(
                        Location(
                            0,
                            7..8,
                        ),
                        Unexpected {
                            token: Word(
                                "b",
                            ),
                            expected: "',' before next item or closing '}' in pattern",
                        },
                    ),
                    because: Unmatched {
                        open_token: OpenBrace,
                    },
                },
            ),
            Error(
                Location(
                    0,
                    14..14,
                ),
                Unexpected {
                    token: End,
                    expected: "a value",
                },
            ),
        ],
    ),
)
