src/snapshots/sel__tests__parsing-34.snap
---
source: src/tests.rs
expression: "t(b\"[1, let 0 fst snd] 1=:a:\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..18,
                ),
                ContextCaused {
                    error: Error(
                        Location(
                            0,
                            19..24,
                        ),
                        ContextCaused {
                            error: Error(
                                Location(
                                    0,
                                    19..24,
                                ),
                                ExpectedButGot {
                                    expected: Number,
                                    actual: Bytes(
                                        true,
                                    ),
                                },
                            ),
                            because: CompleteType {
                                complete_type: Pair(
                                    Number,
                                    Bytes(
                                        true,
                                    ),
                                ),
                            },
                        },
                    ),
                    because: AsNthArgToNowTyped {
                        nth_arg: 3,
                        func: Bind(
                            Number(
                                0.0,
                            ),
                            Tree {
                                loc: Location(
                                    0,
                                    10..13,
                                ),
                                ty: 6,
                                value: Apply(
                                    Name(
                                        "fst",
                                    ),
                                    [],
                                ),
                            },
                            Some(
                                Tree {
                                    loc: Location(
                                        0,
                                        14..17,
                                    ),
                                    ty: 10,
                                    value: Apply(
                                        Name(
                                            "snd",
                                        ),
                                        [],
                                    ),
                                },
                            ),
                        ),
                        type_with_curr_args: Func(
                            Pair(
                                Number,
                                Number,
                            ),
                            Number,
                        ),
                    },
                },
            ),
        ],
    ),
)
