src/snapshots/sel__tests__parsing-35.snap
---
source: src/tests.rs
expression: "t(b\"add 1, map, flip apply {1, 2, 3}\")"
---
Ok(
    (
        List(
            true,
            Number,
        ),
        Tree {
            loc: Location(
                0,
                12..32,
            ),
            ty: 15,
            value: Apply(
                Name(
                    "flip",
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            17..22,
                        ),
                        ty: 25,
                        value: Apply(
                            Name(
                                "apply",
                            ),
                            [],
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            23..32,
                        ),
                        ty: 29,
                        value: List(
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        24..25,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        1.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        27..28,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        2.0,
                                    ),
                                },
                                Tree {
                                    loc: Location(
                                        0,
                                        30..31,
                                    ),
                                    ty: 0,
                                    value: Number(
                                        3.0,
                                    ),
                                },
                            ],
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            7..10,
                        ),
                        ty: 11,
                        value: Apply(
                            Name(
                                "map",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        0..5,
                                    ),
                                    ty: 3,
                                    value: Apply(
                                        Name(
                                            "add",
                                        ),
                                        [
                                            Tree {
                                                loc: Location(
                                                    0,
                                                    4..5,
                                                ),
                                                ty: 0,
                                                value: Number(
                                                    1.0,
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
