src/snapshots/sel__tests__parsing-36.snap
---
source: src/tests.rs
expression: "t(b\"let a [let b a]\")"
---
Ok(
    (
        Func(
            Named(
                "a",
            ),
            Func(
                Named(
                    "b",
                ),
                Named(
                    "a",
                ),
            ),
        ),
        Tree {
            loc: Location(
                0,
                0..15,
            ),
            ty: 6,
            value: Apply(
                Bind(
                    Name(
                        Location(
                            0,
                            4..5,
                        ),
                        "a",
                    ),
                    Tree {
                        loc: Location(
                            0,
                            6..15,
                        ),
                        ty: 5,
                        value: Apply(
                            Bind(
                                Name(
                                    Location(
                                        0,
                                        11..12,
                                    ),
                                    "b",
                                ),
                                Tree {
                                    loc: Location(
                                        0,
                                        13..14,
                                    ),
                                    ty: 3,
                                    value: Apply(
                                        Name(
                                            "a",
                                        ),
                                        [],
                                    ),
                                },
                                None,
                            ),
                            [],
                        ),
                    },
                    None,
                ),
                [],
            ),
        },
    ),
)
